# stanford_self_driving_car_code

./: README.md
driving/glsupport/: CMakeLists.txt  mainpage.dox  manifest.xml  rosdep.yaml
driving/glsupport/include/: facelist.h  fontRenderer.h  gl_support.h  helvetica.h  pointlist.h  textures.h
driving/glsupport/src/: facelist.cpp  fontRenderer.cpp  gl_support.cc  pointlist.cpp  textures.cpp
driving/imagery/: CMakeLists.txt  mainpage.dox  manifest.xml
driving/imagery/include/: bil.h  compassrose.h  imagery.h  imageryServer.h  imageryStructs.h  imagery_proj.h  textureCache.h
driving/imagery/src/: bil.cpp  imagery.cpp  imageryServer.cpp  imagery_proj.cpp  textureCache.cpp
driving/localize/: CMakeLists.txt  mainpage.dox  manifest.xml
driving/localize/include/: fake_localize.h  laserMap.h  localizeVelodyne.h  terrainmap.h  veloClient.h
driving/localize/launch/: test.launch
driving/localize/msg/: LocalizePose.msg
driving/localize/src/: fake_localize.cpp  generate_rndf.cpp  laserMap.cpp  localizeVelodyne.cpp  map_velodyne.cpp  terrainmap.cpp  test_localize_accuracy.cpp  veloClient.cpp  velo_calibrate.cpp
driving/passatmodel/: CMakeLists.txt  mainpage.dox  manifest.xml
driving/passatmodel/include/: bluebk.h  bluedn.h  blueft.h  bluelt.h  bluert.h  blueup.h  junior-plate.h  junior2-plate.h  lasermodel.h  passatgl.h  passatmodel.h  skybox.h
driving/passatmodel/src/: lasermodel.cpp  passatgl.cpp  passatmodel.cpp  skybox.cpp  tiregl.cpp  velodynegl.cpp
driving/vehiclesim/: CMakeLists.txt  mainpage.dox  manifest.xml
driving/vehiclesim/include/: crosswalks.h  lasersim.h  rndf_lookup.h  trafficlights.h  vehicle.h
driving/vehiclesim/launch/: multisim.launch
driving/vehiclesim/src/: crosswalks.cpp  extract_start_state.cc  lasersim.cpp  multisim.cpp  phantom_ibeo.cpp  place_cars.cpp  rndf_lookup.cpp  setup_simulation.cc  spawn_centrals.cpp  spawn_software.cpp  trafficlights.cpp  vehicle.cpp  vehiclesim.cpp
libraries/display/: CMakeLists.txt  mainpage.dox  manifest.xml
libraries/display/include/: display.h  displayDefs.h  displayGL.h  glWidget.h
libraries/display/src/: display.cpp  displayGL.cpp  displayGL_1d.cpp  displayGL_2d.cpp  displayGL_3d.cpp  glWidget.cpp
libraries/matplotlib_interface/: CMakeLists.txt  example.cpp  example_gaussian.py  mainpage.dox  manifest.xml  matplotlib_interface.cpp
perception/descriptors_2d/: CMakeLists.txt  mainpage.dox  manifest.xml
perception/descriptors_2d/src/: descriptors_2d.cpp  example.cpp  hist_test.cpp  surf_test.cpp
perception/descriptors_2d/test/: test_descriptors_2d.cpp
perception/descriptors_3d/: CMakeLists.txt  manifest.xml
perception/descriptors_3d/examples/: interest_point_example.cpp
perception/descriptors_3d/src/: bounding_box_raw.cpp  bounding_box_spectral.cpp  channel.cpp  curvature.cpp  descriptor_3d.cpp  orientation_normal.cpp  orientation_tangent.cpp  position.cpp  shape_spectral.cpp  spin_image_custom.cpp  spin_image_normal.cpp  spin_image_tangent.cpp
perception/multibooster/: CMakeLists.txt  mainpage.dox  manifest.xml  multibooster.cpp  multibooster_dataset.cpp  multitool.cpp  name_mapping.cpp  weak_classifier_tree.cpp  weak_classifier_tree_research.cpp
perception/multibooster/test/: speed_test.cpp  test_multibooster.cpp  test_multibooster_dataset.cpp  test_name_mapping.cpp
perception/point_cloud_mapping/: CMakeLists.txt  manifest.xml  normal_estimation.launch  organized_normal_estimation.launch  planar_fit.launch
perception/point_cloud_mapping/src/: cloud_downsampler.cpp  normal_estimation.cpp  normal_estimation_in_proc.cpp  organized_normal_estimation.cpp  planar_fit.cpp  player_laser_log_to_msg.cpp
perception/velodyne/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_velodyne.xml
perception/velodyne/include/: Driver.h  Points.h  Project3D.h  defaultcal.h  velo_support.h  velodyne.h  velodyneConfig.h
perception/velodyne/launch/: Nodetest.launch  Playback.launch  VelodyneParam.launch  velodyne.launch  velodyne_view.vcg  view.launch
perception/velodyne/msg/: Block.msg  BlockRaw.msg  Packet.msg  Projected.msg  Return.msg  ScanPoint.msg  Stat.msg
perception/velodyne/src/: Driver.cpp  Points.cpp  Project3D.cpp  velo_support.cpp  velodyne.cpp  velodyneConfig.cpp  velodyne_dump.cpp  velodyne_logger.cpp  velodyne_main.cpp  velodyne_stat.cc  vlf_cut.cpp  vlf_index.cpp
planner/aw_chsm_planning/: CMakeLists.txt  mainpage.dox  manifest.xml
planner/aw_chsm_planning/include/: aw_ChsmEvents.hpp  aw_ChsmPlanner.hpp  aw_CrosswalkManager.hpp  aw_IntersectionManager.hpp  aw_LaneChangeManager.hpp  aw_MergeFeasabilityCheck.hpp  aw_PassObstacleManager.hpp  aw_RouteSampler.hpp  aw_SituationInterpretation.hpp  aw_StActive.hpp  aw_StBase.hpp  aw_StCrosswalk.hpp  aw_StDrive.hpp  aw_StDriveKTurn.hpp  aw_StDrivePassObstacle.hpp  aw_StError.hpp  aw_StIntersection.hpp  aw_StIntersectionTrafficLightQueue.hpp  aw_StIntersectionTrafficLightStop.hpp  aw_StIntersectionTrafficLightWait.hpp  aw_StLaneChange.hpp  aw_StLaneChangeTypes.hpp  aw_StPause.hpp  aw_StReplan.hpp  aw_StStop.hpp  aw_StTrafficLight.hpp  aw_StWaitForActivation.hpp  aw_StZone.hpp  aw_TrafficLightManager.hpp  collisionCheck.h  obstaclePrediction.h  trajectoryEvaluator.h
planner/aw_chsm_planning/src/: aw_ChsmPlanner.cpp  aw_CrosswalkManager.cpp  aw_IntersectionManager.cpp  aw_LaneChangeManager.cpp  aw_MergeFeasabilityCheck.cpp  aw_PassObstacleManager.cpp  aw_RouteSampler.cpp  aw_SituationInterpretation.cpp  aw_StActive.cpp  aw_StBase.cpp  aw_StCrosswalk.cpp  aw_StDrive.cpp  aw_StDriveKTurn.cpp  aw_StDrivePassObstacle.cpp  aw_StError.cpp  aw_StIntersection.cpp  aw_StIntersectionTrafficLightQueue.cpp  aw_StIntersectionTrafficLightStop.cpp  aw_StIntersectionTrafficLightWait.cpp  aw_StLaneChange.cpp  aw_StPause.cpp  aw_StReplan.cpp  aw_StStop.cpp  aw_StTrafficLight.cpp  aw_StWaitForActivation.cpp  aw_StZone.cpp  aw_TrafficLightManager.cpp  (+3 more)
planner/aw_rndf/: CMakeLists.txt  mainpage.dox  manifest.xml
planner/aw_topology/: CMakeLists.txt  mainpage.dox  manifest.xml
planner/rndf_edit/: CMakeLists.txt  mainpage.dox  manifest.xml
(+744 files in other folders)
